fixed indents between paragraphs main text

--- a/src/features/StreetcodePage/TextBlock/ReadMore/ReadMore.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/ReadMore/ReadMore.styles.scss
@@ -2,6 +2,10 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
 
+.text {
+    white-space: pre-line;
+}
+
 @media screen and (min-width: 481px) {
     .readMore {
         color: c.$dark-red-color;
@@ -22,7 +26,6 @@
     }
 
     .text {
-        white-space: pre-line;
         margin-right: f.pxToRem(10px);
         margin-left: f.pxToRem(10px);
     }
