Add paddings to partners img

--- a/src/features/AdditionalPages/PartnersPage/PartnersItem/PartnersItem.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/PartnersItem/PartnersItem.styles.scss
@@ -11,5 +11,6 @@
         width: 100%;
         object-fit: contain;
         cursor: pointer;
+        @include mut.rem-padded($right: 32px, $left: 32px);
     }
 }
