--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryItem/ArtGallerySlideItem.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryItem/ArtGallerySlideItem.styles.scss
@@ -96,20 +96,21 @@
     }
 
     .imgData {
-        @include mut.sized(100%, 113px);
+        @include mut.sized(100%);
         @include mut.positioned-as($position: absolute, $bottom: 0);
         @include mut.colored($color: c.$pure-white-color, $bg-color: rgba(0, 0, 0, 0.5));
         visibility: hidden;
         opacity: 0;
         @include vnd.vendored(transition, 'all .5s ease');
-        @include mut.rounded($bottom-right: 30px, $bottom-left: 30px);
+        @include mut.rounded( $bottom-right: 30px, $bottom-left: 30px);
         padding: pxToRem(11px) pxToRem(21px);
     }
 
     .imgTitle {
         @include mut.with-font();
         @include mut.rem-padded($bottom: 5px);
-        @include mut.truncated();
+        @include mut.truncated(2);
+        @include mut.with-font($font-size: 18px);
     }
 
     .imgDescription {
@@ -119,8 +120,6 @@
 
     .imgImg {
         border-radius: pxToRem(30px);
-        height: 100%;
         object-fit: cover;
-        width:100%;
     }
 }
