--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -4,6 +4,7 @@
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
+@use "@app/common/components/CardText/CardText.styles" as textCard;
 
 @keyframes opacity-animation {
     0%    { opacity: 0; }
@@ -77,91 +78,13 @@
         flex: 1 1 auto;
         position: relative;
 
-        @media screen and (max-width: 1024px) {
-            height: fit-content;
-
-            .textContainer {
-                height: 100%;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                text-align: center;
-            }
-        }
-    }
-
-    .streetcodeAlias {
-        color: c.$sliders-text-grey-color;
-        @include mut.rem-margined(9px, 0px, 0px, 0px);
-        @include mut.with-font($font-weight: 500, $font-size: 20px);
-
-        @media screen and (max-width: 1024px) {
-            @include mut.rem-margined(0px, 0px, 0px, 0px);
-            color: c.$lighter-black-color;
-            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
-            line-height: f.pxToRem(14.06px);
-        }
-    }
-
-    .streetcodeLink {
-      @include mut.truncated($line-num: 1);
-      @include mut.with-font($font-weight: bolder);
-      position: absolute;
-      bottom: f.pxToRem(1px);
-      display: flex;
-      color: c.$dark-red-color;
-
-      &:hover {
-          text-decoration: underline;
-      }
-
-        @media screen and (max-width: 1024px) {
-            @include mut.rem-margined(0px, 0px, 0px, 0px);
-            color: c.$dark-red-color;
-            @include mut.with-font(ft.$roboto-font, $font-weight: 500, $font-size: 12px);
-            line-height: f.pxToRem(14.06px);
-            width: 100%;
-            position: unset;
-            text-decoration: underline;
-        }
-  }
-    .streetcodeTitle {
-        @include mut.rem-padded($top: 18px, $right: 0px, $bottom: 0px, $left: 0px);
-        @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 34px);
-        color: c.$lighter-black-color;
-        line-height: f.pxToRem(40px);
-    }
-
-    .streetcodeMainPageContainer {
-        box-sizing: border-box;
-        width: 100%;
-        height: 100%;
-        @include mut.flexed(column, start, space-between, nowrap);
         @include mut.rem-padded(28px, 0px, 0px, 0px);
 
         @media screen and (max-width: 1024px) {
             @include mut.rem-padded(6px, 0px, 0px, 0px);
-        }
-    }
-
-    .streetcodeTeaser {
-        width: 100%;
-        @include mut.rem-margined(12px, 3px, 0px, 0px);
-        @include mut.rem-padded(0px, 5px, 0px, 0px);
-        line-height: f.pxToRem(23px);
-        max-height: f.pxToRem(214px);
-        overflow: auto;
-        color: c.$lighter-black-color;
-        @include mut.with-font($font-weight: 300, $font-size: 20px);
-
-        &::-webkit-scrollbar {
-            display: none;
+            height: auto;
         }
 
-        @media screen and (max-width: 1024px) {
-            flex-direction: column;
-            text-align: center;
-        }
     }
 
     .streetcodeMainPageImg {
@@ -180,5 +103,33 @@
 
     .imgVisible{
         animation: opacity-animation .5s ease-in forwards;
+    }
+
+    @include textCard.cardText();
+    .cardTextContainer{
+        &Title{
+            @media screen and (max-width: 1024px) {
+                display: none;
+            }
+        }
+
+        &SubTitle{
+            @media screen and (max-width: 1024px) {
+               text-align: center;
+                color: c.$lighter-black-color;
+            }
+        }
+
+        &Text{
+            @media screen and (max-width: 1024px) {
+                display: none;
+            }
+        }
+
+        &Button{
+            @media screen and (max-width: 1024px) {
+                text-align: center;
+            }
+        }
     }
 }
