add preview art on hover and restrict same arts on same slide

--- a/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourSlide/OneToTwoAndThreeToFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourSlide/OneToTwoAndThreeToFourSlide.styles.scss
@@ -5,7 +5,7 @@
 .OneToTwoAndThreeToFourSlide{
     @include mut.flex-center();
 
-    img{
+    .baseArtSlideImageWrapper{
         width: pxToRem(s.$art-gallery-img-size);
     }
 }
