--- a/src/app/common/components/ArtGallery/components/BaseArtGallerySlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/BaseArtGallerySlide.styles.scss
@@ -1,7 +1,9 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
+@use "@sass/variables/_variables.colors.scss" as c;
+@use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
-.base-art-slide{
+.baseArtSlide{
     position: relative;
     overflow: hidden;
     padding: pxToRem(30px);
@@ -15,17 +17,57 @@
     gap: pxToRem(30px);
 }
 
-.base-art-image{
-    border-radius: 50px;
-    object-fit: cover;
+.baseArtSlideImageWrapper{
+    position: relative;
+    @include mut.full-size();
 
-    max-height: 100%;
-    max-width: 100%;
-    width: 100%;
-    height: 100%;
+    .baseArtImage{
+        border-radius: pxToRem(30px);
+        object-fit: cover;
+
+        @include mut.full-size();
+    }
+
+    &:hover {
+        cursor: pointer;
+
+        .imgDataFull {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+
+    .imgData {
+        @include mut.sized(100%);
+        @include mut.positioned-as($position: absolute, $bottom: 0);
+        @include mut.colored($color: c.$pure-white-color, $bg-color: rgba(0, 0, 0, 0.5));
+        visibility: hidden;
+        opacity: 0;
+        @include vnd.vendored(transition, 'all .5s ease');
+        @include mut.rounded( $bottom-right: 30px, $bottom-left: 30px);
+        padding: pxToRem(11px) pxToRem(21px);
+    }
+
+    .imgTitle {
+        @include mut.with-font();
+        @include mut.rem-padded($bottom: 5px);
+        @include mut.truncated(2);
+        @include mut.with-font($font-size: 18px);
+    }
+
+    .imgDescription {
+        @include mut.with-font($font-size: 15px);
+        @include mut.truncated();
+    }
+
+    .imgImg {
+        border-radius: pxToRem(30px);
+        object-fit: cover;
+    }
 }
 
-.admin-options-btn {
+
+.adminOptionsBtn {
     position: absolute;
     top: 2rem;
     right: 2rem;
