--- a/src/app/common/components/ArtGallery/components/OneToTwoSlide/OneToTwoSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoSlide/OneToTwoSlide.styles.scss
@@ -5,7 +5,7 @@
 .oneToTwoSlide{
     @include mut.flex-center();
 
-    img{
+    .baseArtSlideImageWrapper{
         width: pxToRem(s.$art-gallery-img-size);
     }
 }
