--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -181,6 +181,13 @@
   color: $color;
   background-color: $bg-color;
 }
+
+@mixin full-size{
+  max-height: 100%;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+}
 // --------------------------Text----------------------------------
 @mixin withLineHeight($line-height){
   line-height:f.pxToRem($line-height);
