--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -3,6 +3,7 @@
 @use "@sass/_utils.functions.scss" as *;
 @use "@sass/variables/_variables.fonts.scss" as f;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
+@use "@assets/sass/variables/_variables.layers.scss" as l;
 
 .relatedFigureSlide {
     @include mut.sized($width: 278px, $height: 380px);
@@ -18,7 +19,7 @@
     @include vnd.vendored(transition, 'all .5s ease');
     cursor: pointer;
 
-    z-index: 1000;
+    z-index: l.$modal;
 }
 
 .figureSlideText {
