--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -1,6 +1,7 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as f;
 @use "@assets/sass/variables/_variables.colors.scss" as c;
+@use "@assets/sass/variables/_variables.layers.scss" as l;
 
 $bgImg: '@assets/images/streetcode-card/background.webp';
 
@@ -90,7 +91,7 @@ $bgImg: '@assets/images/streetcode-card/background.webp';
     height: 100vh;
     background-color: c.$accented-gray-color;
     @include mut.flexed($justify-content: center, $align-items: center);
-    z-index: 100000;
+    z-index: l.$loader;
     pointer-events: none;
 }
 
