--- a/src/app/common/components/ArtGallery/components/OneToFourSlide/OneToFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourSlide/OneToFourSlide.styles.scss
@@ -5,11 +5,7 @@
 .oneToFourSlide{
     @include mut.flex-center();
 
-    img{
+    .droppable, .baseArtSlideImageWrapper{
         width: pxToRem(s.$art-gallery-img-size * 2.6);
-    }
-
-    .droppable{
-        width: auto;
     }
 }
