--- a/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
+++ b/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
@@ -31,6 +31,7 @@
 
 .configurationGalleryControls{
     @include mut.flex-center();
+    gap: 2rem;
 }
 
 @media screen and (max-width:1450px) {
@@ -44,7 +45,7 @@
         }
     }
 }
-@media screen and (max-width:1200px) {//-32.5%
+@media screen and (max-width:1200px) {
     .artGalleryWrapper {
         .artGalleryContainer {
             .artGalleryContentContainer{
