make all slide templates equal height

--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -293,8 +293,12 @@
 }
 
 @mixin art-slide-grid($cols:1, $rows:1){
+  $gap: 30px;
+  $gap-sum: ($rows - 1) * $gap;
+
   display: grid;
+  gap: f.pxToRem($gap);
   justify-content: center;
   grid-template-columns: repeat($cols, 1fr);
-  grid-template-rows: repeat($rows, f.pxToRem(calc(536px/$rows)));
+  grid-template-rows: repeat($rows, f.pxToRem(calc((536px - $gap-sum)/$rows)));
 }
