--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFactItem/InterestingFactItem.styles.scss
@@ -3,6 +3,7 @@
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 @use "@assets/sass/_utils.functions.scss" as f;
 @use "@assets/sass/mixins/_vendor.mixins.scss" as vnd;
+@use "@app/common/components/CardText/CardText.styles" as textCard;
 
 .interestingFactSlide {
   @include mut.sized(387px);
@@ -52,28 +53,47 @@
 
   .slideText {
     @include mut.sized(100%, 167px);
-    @include mut.rounded($bottom-right: 33px, $bottom-left: 33px);
+    padding-bottom: f.pxToRem(15px);
+    @include textCard.cardText(
+            $title-max-lines: 1,
+            $text-max-lines: 5,
+    );
 
-    .heading {
-      @include mut.rem-padded(17px, 20px, 7px, 20px);
-      color: c.$accented-red-color;
-
-      @include mut.with-font($font-weight: 500, $font-size: 17px);
-      line-height: f.pxToEm(20px);
+    @media screen and (max-width: 1024px) {
+      padding-bottom: f.pxToRem(5px);
     }
 
-    .mainText {
-      @include mut.rem-padded(0, 20px, 0px, 20px);
-      color: c.$lighter-black-color;
-      word-wrap: break-word;
-
+    .cardTextContainer{
       @include mut.with-font($font-weight: 300, $font-size: 13px);
       line-height: f.pxToEm(18px);
 
-    }
+      @media screen and (max-width: 1450px) {
+        @include mut.with-font($font-weight: 300, $font-size: 10px);
+        line-height: f.pxToEm(16px);
+      }
 
-    .lineSpecifier {
-      @include mut.truncated($line-num: 5);
+      &TopPart{
+        @media screen and (max-width: 768px) {
+          gap: f.pxToRem(2px);
+        }
+      }
+
+      &Title{
+        padding-top: f.pxToRem(17px);
+        color: c.$accented-red-color;
+        @include mut.with-font($font-weight: 500, $font-size: 17px);
+        line-height: f.pxToEm(20px);
+
+        @media screen and (max-width: 1450px) {
+          padding-top: f.pxToRem(7px);
+
+          @include mut.with-font($font-weight: 500, $font-size: 12px);
+        }
+      }
+
+      &Button{
+        text-decoration: none;
+      }
     }
   }
 }
@@ -119,19 +139,6 @@
 
     .slideText {
       @include mut.sized(100%, 145px);
-      @include mut.rounded(0);
-
-      .heading {
-        @include mut.rem-padded(7px, 20px, 6px, 12px);
-        @include mut.with-font($font-weight: 500, $font-size: 12px);
-        line-height: f.pxToEm(12px);
-      }
-
-      .mainText {
-        @include mut.rem-padded(0, 12px, 0px, 12px);
-        @include mut.with-font($font-weight: 300, $font-size: 10px);
-        line-height: f.pxToEm(16px);
-      }
     }
 
     .readMoreParagraph {
@@ -240,11 +247,6 @@
     .slideImage {
       @include mut.sized(100%, 50%);
       @include mut.rounded(20px, 20px);
-    }
-
-    .slideText {
-      @include mut.full-rounded(0px);
-      overflow: visible;
     }
   }
 }
