--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -128,9 +128,20 @@
     box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);
   }
 }
-.streetcodeImg {
+.streetcodeImg, .streetcodeImgColored {
     margin: auto;
     @include mut.sized(415px, 542px);
+}
+
+.streetcodeImgColored{
+  position: absolute;
+  animation: fadeIn 4s;
+
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
 }
 .playCircle {
     font-size: f.pxToRem(37px);
@@ -208,7 +219,7 @@
         @include mut.with-font(ft.$roboto-font, $font-weight: 400, $font-size: 20px);
         @include mut.withLineHeight(23px);
       }
-      .streetcodeImg {
+      .streetcodeImg, streetcodeImgColored {
         @include mut.sized(290px, 377px);
       }
       .cardFooter {
