--- a/src/app/layout/header/HeaderBlock.styles.scss
+++ b/src/app/layout/header/HeaderBlock.styles.scss
@@ -6,6 +6,7 @@
 
 $navbar-innerwidth: 500px; 
 $navbar-hidden-innerwidth: 400px;
+$search-popover-padding: 5px;
 
 .navBarContainer {
   @include mut.flexed($justify-content: space-between, $align-items: center);
@@ -108,6 +109,20 @@ $navbar-hidden-innerwidth: 400px;
   
   .burgerMenuContainer {
     @include mut.rem-margined(0);
+  }
+}
+
+.searchPopover{
+  width: calc(100vw - #{$navbar-hidden-innerwidth});
+  .ant-popover-inner{
+    padding: $search-popover-padding;
+  }
+}
+
+.searchPopoverSkeleton{
+  width: calc(100vw - #{$navbar-innerwidth});
+  .ant-popover-inner{
+    padding: $search-popover-padding;
   }
 }
 
