fixed background overlapping text

--- a/src/features/AdditionalPages/PartnersPage/Title/Title.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/Title/Title.styles.scss
@@ -38,6 +38,8 @@
 
         .subTitle{
             @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
+            position: relative;
+            z-index: 1;
         }
     }
 }
