--- a/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
+++ b/src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@@ -142,7 +142,7 @@
         &Button{
             font-weight: 500;
             @media screen and (max-width: 1024px) {
-                text-align: center;
+                margin: 0 auto;
             }
         }
     }
