--- a/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
+++ b/src/features/AboutUsPage/Vacancies/Vacancy/Vacancy.syles.scss
@@ -3,54 +3,63 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/variables/_variables.fonts.scss" as ft;
 @use "@assets/sass/variables/_variables.sizes.scss" as s;
+@use "@app/common/components/CardText/CardText.styles" as textCard;
 
 .vacancyContainer {
     display: flex;
-    flex-direction: column;
-    padding: f.pxToRem(50px) f.pxToRem(74px);
-    gap: f.pxToRem(15px);
     border-radius: 50px;
+    padding: f.pxToRem(50px) f.pxToRem(74px);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
-    h2 {
-        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 32px);
-        @include mut.truncated(1);
-    }
+    @include textCard.cardText(
+            $title-max-lines: 1,
+            $text-max-lines: 3);
 
-    h3 {
-        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
-        color: c.$lighter-gray-color;
-    }
+    .cardTextContainer{
+        padding: 0;
 
-    p {
-        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 300, $font-size: 20px);
-        word-break: break-word;
-    }
+        &TopPart{
+            gap: f.pxToRem(10px);
+        }
 
-    label {
-        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
-        color: c.$dark-red-color;
-        cursor: pointer;
+        &Title{
+            font-size: f.pxToRem(32px) !important;
+
+            @media screen and (max-width: s.$tablet) {
+                font-size: f.pxToRem(24px) !important;
+            }
+        }
+
+        &SubTitle{
+            color: c.$lighter-gray-color;
+        }
+
+        &Text{
+            font-family: ft.$roboto-font !important;
+            font-weight: 300  !important;
+
+            @media screen and (max-width: s.$phone) {
+                @include mut.truncated($line-num: 9);
+            }
+        }
+
+        &Button{
+            font-weight: 500;
+        }
+
+        p {
+            @include mut.with-font(
+                    $font-family: ft.$closer-text-font,
+                    $font-weight: 500,
+                    $font-size: 20px);
+
+            @media screen and (max-width: s.$tablet) {
+                $font-size: f.pxToRem(20px) !important;
+            }
+        }
     }
 
     @media screen and (max-width: s.$tablet) {
         padding: f.pxToRem(40px);
-        gap: f.pxToRem(10px);
-
-        h2 {
-            font-size: 24px !important;
-        }
-
-        h3 {
-            font-size: 16px !important;
-        }
-
-        p {
-            font-size: 16px !important;
-        }
-
-        label {
-            font-size: 16px !important;
-        }
     }
 }
