--- a/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
@@ -7,12 +7,12 @@
     width: 100%;
     overflow-y: auto;
     @include mut.flexed($direction: column);
-    
+    @include mut.rem-padded(12px, 12px, 12px, 12px);
 }
 
 @media screen and (max-width: 1024px) {
     .searchResultsBlock{ 
-        width: 95vw;
+        width: 100vw;
         overflow-y: auto;
         
     }
