--- a/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
@@ -7,12 +7,12 @@
     width: 100%;
     overflow-y: auto;
     @include mut.flexed($direction: column);
-    @include mut.rem-padded(12px, 12px, 12px, 12px);
+    @include mut.rem-padded(12px, 0, 12px, 12px);
 }
 
 @media screen and (max-width: 1024px) {
     .searchResultsBlock{ 
-        width: 100vw;
+        @include mut.rem-padded($right: 6px, $left: 6px);
         overflow-y: auto;
         
     }
