--- a/src/app/layout/header/SearchBlock/SearchResultItem/SearchItem.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchResultItem/SearchItem.styles.scss
@@ -36,7 +36,7 @@
     .resultSourceName{
         @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 400, $font-size: 15px);
 
-        max-width: 30%;     
+        width: auto;     
         line-height: 18px;
         color: #D1D1D1;
 
