--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -128,7 +128,7 @@
     box-shadow: 0px 4px 4px rgba(219, 52, 36, 0.1);
   }
 }
-.streetcodeImg, .streetcodeImgColored {
+.streetcodeImg, .streetcodeImgColored, .streetcodeImgGrey {
     margin: auto;
     @include mut.sized(415px, 542px);
 }
@@ -141,8 +141,17 @@
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
-
 }
+
+.streetcodeImgGrey{
+  animation: fadeOut 3s;
+  animation-fill-mode: forwards;
+  @keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+}
+
 .playCircle {
     font-size: f.pxToRem(37px);
     margin-right: f.pxToRem(10px);
@@ -219,7 +228,7 @@
         @include mut.with-font(ft.$roboto-font, $font-weight: 400, $font-size: 20px);
         @include mut.withLineHeight(23px);
       }
-      .streetcodeImg, streetcodeImgColored {
+      .streetcodeImg,  streetcodeImgColored, .streetcodeImgGrey{
         @include mut.sized(290px, 377px);
       }
       .cardFooter {
