set display to inline in cardText

--- a/src/app/common/components/CardText/CardText.styles.scss
+++ b/src/app/common/components/CardText/CardText.styles.scss
@@ -36,6 +36,10 @@
 
         &Text{
             @include mut.truncated($line-num: $text-max-lines);
+
+            * {
+                display: inline;
+            }
         }
 
         &Button{
