hide the No results message during the query execution

--- a/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
@@ -17,7 +17,7 @@
 @media screen and (max-width: 1024px) {
     .searchResultsBlock{
         width: 100vw;
-        @include mut.rem-padded($right: 6px, $top: 6px, $left: 6px);
+        @include mut.rem-padded(6px, 6px, 6px, 6px);
         overflow-y: auto;
         
         p{
