--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -4,6 +4,7 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 
 $moreInfo-width: 150px;
+$card-size: 380px;
 
 .relatedFiguresWrapper.container{
     margin-top: f.pxToRem(120px);
@@ -56,7 +57,8 @@ $moreInfo-width: 150px;
     margin: 0 auto;
 
     .slick-arrow {
-        top: 45%;
+        position: absolute;
+        top: f.pxToRem(calc($card-size / 2));
     }
 
     .slick-list {
