--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -46,6 +46,8 @@
         .slick-track {
             @include mut.flex-centered($gap: 30px);
             width: unset !important;
+            border: none;
+            border: 1px solid transparent;          
             .slick-slide {
                 @include vnd.vendored(transition, 'all .5s ease');
                 .left, .right{
@@ -56,6 +58,10 @@
                     scale: 101%;
                     filter: contrast(135%);
                     cursor: pointer;
+                    &:focus,
+                    &:focus-visible {
+                    outline: none;
+                    }
                 }
             }
             .slick-cloned{
